# fast_allocator

./: CMakeLists.txt  main.cpp
allocator/: CMakeLists.txt  allocator.h
factory/: CMakeLists.txt  factory.h
